# cli-booking-system

./: .env.example  .gitignore  README.md  pyproject.toml
src/gic_cinema_booking/: __init__.py  cli.py  config.py  services.py
tests/: conftest.py  test_cli.py  test_config.py  test_services.py
